fix modal height on mobile

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -36,9 +36,6 @@
               margin-top: 88px;
             }
         }
-        @include d(480){
-          min-height: 100vh;
-        }
     }
     &-label{
       margin-bottom: 10px;
